# arov

./: .gitignore  .gitmodules  Bender.yml  Makefile  README.md  setup.sh
fpga/: .gitignore  Makefile
fpga/tcl/: acc_timing.tcl  hero_exilzcu102.tcl
fpga/utils/area/: report_area.tcl
fpga/utils/hero/: fpga_out_files.tcl  hero_exilzcu102.tcl
fpga/utils/hero/kv260/: hero_exilkv260.tcl  hero_exilkv260_export_hw.tcl
fpga/utils/hero/ultra96_v2/: hero_exilultra96_v2.tcl  hero_exilultra96_v2_debug.xdc  hero_exilultra96_v2_export_hw.tcl
fpga/utils/hero/zcu102/: date_22_zcu102.tcl  hero_exilzcu102.tcl  hero_exilzcu102_export_hw.tcl
fpga/utils/hero/zcu104/: hero_exilzcu104.tcl  hero_exilzcu104_debug.xdc  (+1 more)
fpga/utils/power/: post_synth_tb_exilzcu102.sv  power_sim.tcl  report_power.tcl
fpga/utils/reports/: acc_utilization.tcl  get_util_csv.tcl  reports.tcl
ov/: .gitignore  Bender.yml  Makefile
ov/fpga/: hero_exilzcu102.tcl
ov/src/: pulp_cluster_ooc.sv
ov/test/: pulp_tb.sv
ov/vsim/: .gitignore  Makefile  start_sim.sh
ov_cfg/: .gitignore
ov_cfg/asap_test_traffic/ip/: pulp_txilzu9eg.v
ov_cfg/asap_test_traffic/test/: overlay_tb.sv
ov_cfg/asap_test_traffic/test/sw/inc/stim/hwpe_cl0_lic0/ref_sw/: CMakeLists.txt
ov_cfg/asap_test_traffic/test/sw/inc/stim/hwpe_cl0_lic0/ref_sw/src/: gen_Hfile.c  gen_stim.c  main.c  ref_app.cpp  ref_app.h
ov_cfg/asap_test_traffic/test/sw/inc/stim/hwpe_cl0_lic3/ref_sw/: CMakeLists.txt
ov_cfg/asap_test_traffic/test/sw/inc/stim/hwpe_cl0_lic3/ref_sw/src/: gen_stim.c  main.c  ref_app.c  ref_app.h
scripts/py_env/: init_py_env.sh  secure_paths.sh  update_reqs.sh
src/: pulp.sv  pulp_cluster_cfg_pkg.sv
src/include/: pulp_defines.svh
test/: gen_slm_files.sh  pulp_tb.wave.do
vsim/: Makefile  compile.sh  run.tcl  start_sim.sh
(+73 files in other folders)
